--- a/component/forms/schema/plugins/table/table-props.html
+++ b/component/forms/schema/plugins/table/table-props.html
@@ -1,4 +1,4 @@
-<div class="container padding-top">
+<div class="padding-top">
     <div class="row">
         <form name="fieldPropsForm" class="form-horizontal">
             <div class="col-md-4 col-sm-4 col-xs-12">
@@ -17,12 +17,12 @@
                 </div>
                 <div class="form-group" ng-class="{'has-error': fieldPropsForm.{{field.name}}-cols.$invalid}">
                     <label for="{{field.name}}-cols" class="control-label col-sm-5">Cols:</label>
-                    <div class="col-lg-3">
+                    <div class="col-sm-3">
                         <input type="number" class="form-control" id="{{field.name}}-cols" name="{{field.name}}-cols"
                                placeholder="Cols..." ng-model="field.matrix[0].length"
                                ng-required="false" ng-disabled="true">
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-sm-3">
                         <button type="button" class="btn btn-primary" ng-click="addColumn()" title="Add column">
                             Add
                         </button>
@@ -65,44 +65,46 @@
             </div>
             <div class="col-md-8 col-sm-8 col-xs-12">
                 <h3>Columns configuration</h3>
-                <table class="table table-bordered table-responsive">
-                    <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>CSS class</th>
-                        <th>Width</th>
-                        <th>Total</th>
-                        <th>Total Label</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr ng-repeat="col in field.matrix[0]">
-                        <td>
-                            {{$index + 1}}
-                        </td>
-                        <td>
-                            <input type="text" class="form-control" id="{{field.name}}-col{{$index}}"
-                                   name="{{field.name}}-col{{$index}}"
-                                   placeholder="Css class..." ng-model="field.matrix[0][$index].cssClass">
-                        </td>
-                        <td>
-                            <input type="text" class="form-control" id="{{field.name}}-width{{$index}}"
-                                   name="{{field.name}}-width{{$index}}"
-                                   placeholder="width..." ng-model="col.width">
-                        </td>
-                        <td>
-                            <input type="checkbox" id="{{field.name}}-total{{$index}}"
-                                   name="{{field.name}}-total{{$index}}"
-                                   title="Add total to this column" ng-model="col.total">
-                        </td>
-                        <td>
-                            <input type="text" class="form-control" id="{{field.name}}-totalLabel{{$index}}"
-                                   name="{{field.name}}-totalLabel{{$index}}" placeholder="Total label..."
-                                   ng-model="field.matrix[0][$index].totalLabel">
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
+                <div class="table-responsive" style="max-height: 300px">
+                    <table class="table table-bordered">
+                        <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>CSS class</th>
+                            <th>Width</th>
+                            <th>Total</th>
+                            <th>Total Label</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="col in field.matrix[0]">
+                            <td>
+                                {{$index + 1}}
+                            </td>
+                            <td>
+                                <input type="text" class="form-control" id="{{field.name}}-col{{$index}}"
+                                       name="{{field.name}}-col{{$index}}"
+                                       placeholder="Css class..." ng-model="field.matrix[0][$index].cssClass">
+                            </td>
+                            <td>
+                                <input type="text" class="form-control" id="{{field.name}}-width{{$index}}"
+                                       name="{{field.name}}-width{{$index}}"
+                                       placeholder="width..." ng-model="col.width">
+                            </td>
+                            <td>
+                                <input type="checkbox" id="{{field.name}}-total{{$index}}"
+                                       name="{{field.name}}-total{{$index}}"
+                                       title="Add total to this column" ng-model="col.total">
+                            </td>
+                            <td>
+                                <input type="text" class="form-control" id="{{field.name}}-totalLabel{{$index}}"
+                                       name="{{field.name}}-totalLabel{{$index}}" placeholder="Total label..."
+                                       ng-model="field.matrix[0][$index].totalLabel">
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </form>
     </div>
