--- a/component/forms/toolbar/components/input.html
+++ b/component/forms/toolbar/components/input.html
@@ -1,2 +1,4 @@
-<div ng-include="'forms/toolbar/components/label.html'"></div>
-<input class="form-control" type="{{component.type}}" name="{{component.name}}" id="{{component.name}}"/>
+<form>
+    <div ng-include="'forms/toolbar/components/label.html'"></div>
+    <input class="form-control" type="{{component.type}}" name="{{component.name}}" id="{{component.name}}"/>
+</form>
