--- a/component/forms/viewer/viewer.html
+++ b/component/forms/viewer/viewer.html
@@ -7,7 +7,7 @@
     <div ng-if="schema.layout.length !== 0">
         <div class="box-body padding-top">
             <div ng-repeat="section in schema.layout">
-                <h4 ng-bind-html="section.title"></h4>
+                <h4 ng-bind-html="section.title" ng-hide="hideTitle(section)"></h4>
                 <div class="{{row.cssClass}}" ng-repeat="row in section.rows">
                     <div class="{{col.cssClass}}" ng-repeat="col in row.cols">
                         <div class="" ng-repeat="field in col.fields">
