Fixed css class on image-upload.

--- a/component/image-upload/image-upload.html
+++ b/component/image-upload/image-upload.html
@@ -1,3 +1,22 @@
-<img class="img-responsive {{class}}" id="imgPicture" style="{{css}}"
+<img class="img-responsive {{cssClass}}" id="imgPicture"
      data-ng-src="{{'data:' + imageType + ';base64,' + image}}"
-     ng-click="openModal()" style="cursor: pointer;min-height: 100px" alt="User profile picture">
+     ng-click="openModal()" style="cursor: pointer;min-height: 100px;{{css}}" alt="User profile picture">
+
+<!--<div class="o_form_image_controls" style="-->
+    <!--position: absolute;-->
+    <!--top: 0;-->
+    <!--left: 10px;-->
+    <!--bottom: auto;-->
+    <!--right: 10px;-->
+    <!--width: 80%;-->
+    <!--color: #f4f4f4;-->
+    <!--background-color: #00a09d;-->
+    <!--/* opacity: 0; */-->
+    <!--transition: opacity ease 400ms;">-->
+  <!--<span class="fa fa-pencil fa-lg pull-left o_select_file_button" title="Edit" style="-->
+    <!--margin: 5px;-->
+    <!--cursor: pointer;"></span>-->
+    <!--<span class="fa fa-trash-o fa-lg pull-right o_clear_file_button" title="Clear" style="-->
+    <!--margin: 5px;-->
+    <!--cursor: pointer;"></span>-->
+<!--</div>-->
