Fixed several errors with reports and jshint warnings.

--- a/component/reports/reports.html
+++ b/component/reports/reports.html
@@ -22,7 +22,7 @@
                         <ul class="list-group list-group-unbordered">
                             <li class="list-group-item" ng-repeat="report in group.reports"
                                 ng-init="reportIndex = $index">
-                                <a ng-click="openReport(groupIndex, reportIndex)"><b>{{report.title}}</b></a>
+                                <a href="" ng-click="openReport(groupIndex, reportIndex)"><b>{{report.title}}</b></a>
                             </li>
                         </ul>
                     </div>
