Added select-filterd directive.

--- a/component/select-filtered/select-filtered.html
+++ b/component/select-filtered/select-filtered.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<!--<div class="form-group">-->
     <label for="{{name}}">{{label}}</label>
     <div class="input-group">
         <ui-select name="{{name}}" id="{{name}}" ng-model="selected.value" ng-disabled="{{ngDisabled}}"
@@ -26,4 +26,4 @@
             </div>
         </div>
     </div>
-</div>
+<!--</div>-->
