Added onSelect event to select-filtered directive.

--- a/component/select-filtered/select-filtered.html
+++ b/component/select-filtered/select-filtered.html
@@ -2,7 +2,8 @@
     <label for="{{name}}" ng-if="!hideLabel">{{label}}</label>
     <div class="input-group">
         <ui-select name="{{name}}" id="{{name}}" ng-model="selected.value" ng-disabled="{{ngDisabled}}"
-                   ui-select-required="ngRequired" close-on-select="true" title="{{tooltip}}">
+                   ui-select-required="ngRequired" close-on-select="true" title="{{tooltip}}"
+                   on-select="onSelectFn()">
             <ui-select-match placeholder="{{placeholder}}">
                 {{getSelectTitleValue($select.selected)}}
             </ui-select-match>
