Fixed Address directive.

--- a/component/address/address-dialog.html
+++ b/component/address/address-dialog.html
@@ -135,8 +135,8 @@
                     <div class="input-group">
                     <span class="input-group-addon" uib-tooltip="Mark it if you don't have email">
                         <input type="checkbox" id="field_nonEmail" name="field_nonEmail" ng-model="vm.nonEmail"
-                               ng-click="vm.toggleEmail()" style="position: relative">
-                        <label for="field_nonEmail" style="height: 13px;"></label>
+                               ng-click="vm.toggleEmail()">
+                        <label for="field_nonEmail" style="padding-left: 20px;height: 13px;"></label>
                     </span>
                         <input type="email" class="form-control" name="email" id="field_email" ng-required="true"
                                ng-model="vm.address.email" placeholder="Email..." tabindex="10"
