--- a/component/address/address-dialog.html
+++ b/component/address/address-dialog.html
@@ -135,7 +135,7 @@
                     <div class="input-group">
                     <span class="input-group-addon" uib-tooltip="Mark it if you don't have email">
                         <input type="checkbox" id="field_nonEmail" name="field_nonEmail" ng-model="vm.nonEmail"
-                               ng-click="vm.toggleEmail()" style="position: relative">
+                               ng-click="vm.toggleEmail()" style="position: relative;margin-top: 4px;">
                         <!--<label for="field_nonEmail" style="padding-left: 20px;height: 13px;"></label>-->
                     </span>
                         <input type="email" class="form-control" name="email" id="field_email" ng-required="true"
