Added select2 component to the form builder.

--- a/component/forms/common/fields/select.html
+++ b/component/forms/common/fields/select.html
@@ -1,11 +1,6 @@
-<ui-select ods-dynamic-name="field.name" name="{{field.name}}" id="{{field.name}}" ng-model="field.value" ng-disabled="{{fieldDisabled}}"
-           ui-select-required="getRequired(field)" close-on-select="true" title="{{field.tooltip}}">
-    <ui-select-match placeholder="{{field.placeholder}}">
-        {{getSelectFieldTitleValue(field, $select.selected)}}
-    </ui-select-match>
-    <ui-select-choices repeat="element in field.options | filter:$select.search | limitTo: field.limitTo">
-        <div ng-bind-html="getSelectFieldTitleValue(field, element) | highlight: $select.search"></div>
-        <!--<small ng-bind-html="vm.getSelectTitleField(param, element) | highlight: $select.search"></small>-->
-        <!--{{vm.getSelectTitleField(param, element)}}-->
-    </ui-select-choices>
-</ui-select>
+<select class="form-control" ods-dynamic-name="field.name" name="{{field.name}}" id="{{field.name}}"
+        ng-model="field.value" title="{{field.tooltip}}" ng-required="getRequired(field)"
+        ng-disabled="{{fieldDisabled}}"
+        ng-options="element as element.name for element in field.options | limitTo: field.limitTo track by element.id">
+    <option value="" disabled hidden>{{field.placeholder}}</option>
+</select>
