Testing with view form.

--- a/component/forms/form-info/form-info.html
+++ b/component/forms/form-info/form-info.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col-lg-9">
                 <div class="form-group" ng-class="{'has-error': formInfo.handleSubmit.$invalid}">
-                    <label class="control-label" for="hideLabel">Hide form title: &nbsp;</label>
+                    <label class="control-label" for="hideLabel">Hide form label: &nbsp;</label>
                     <input type="checkbox" name="hideLabel" id="hideLabel"
                            ng-model="schema.hideLabel" ng-required="false"
                            title="This allow to hide the form title.">
