--- a/component/forms/form/form.html
+++ b/component/forms/form/form.html
@@ -5,7 +5,7 @@
     <!-- /.box-header -->
     <!-- form start -->
     <div ng-if="schema.layout.length !== 0">
-        <form name="{{schema.name}}" role="form" novalidate show-validation ng-submit="save()">
+        <ng-form name="{{schema.name}}" role="form" novalidate>
             <div class="box-body padding-top">
                 <div class="alert alert-success" ng-show="success">
                     <strong>Success! </strong>{{message}}
@@ -63,6 +63,6 @@
                     <span class="fa fa-save"></span>&nbsp;<span>Save</span>
                 </button>
             </div>
-        </form>
+        </ng-form>
     </div>
 </div>
