--- a/component/forms/schema/components/section/section-properties.html
+++ b/component/forms/schema/components/section/section-properties.html
@@ -1,13 +1,13 @@
-<uib-tabset class="nav-tabs-custom">
+<uib-tabset class="nav nav-tabs">
     <uib-tab index="0" heading="Properties">
         <div class="padding-top">
             <form name="sectionPropertiesForm" class="form-horizontal">
                 <div class="form-group"
                      ng-class="{'has-error': sectionPropertiesForm.{{section.name}}-sectionName.$invalid}">
                     <label for="{{section.name}}-sectionName" class="col-sm-2 control-label">Name:</label>
-                    <div class="col-sm-2">
+                    <div class="col-sm-3 ">
                         <input type="text" class="form-control" id="{{section.name}}-sectionName"
-                               name="{{section.name}}-sectionName"
+                               name="{{section.name}}-sectionName" ng-readonly="true"
                                placeholder="Name..." ng-model="section.name"
                                ng-required="true">
                     </div>
@@ -47,7 +47,7 @@
             </form>
         </div>
     </uib-tab>
-    <uib-tab index="3" heading="Debug" ng-show="debugMode">
+    <uib-tab index="1" heading="Debug" ng-show="debugMode">
         <ods-model model="section" css-class="fixed-height"></ods-model>
     </uib-tab>
 </uib-tabset>
