--- a/component/forms/schema/components/section/section-properties.html
+++ b/component/forms/schema/components/section/section-properties.html
@@ -1,7 +1,7 @@
 <uib-tabset class="nav nav-tabs">
     <uib-tab index="0" heading="Properties">
-        <div class="padding-top">
-            <form name="sectionPropertiesForm" class="form-horizontal">
+        <form name="sectionPropertiesForm" class="form form-horizontal">
+            <div class="padding-top">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <div class="form-group"
@@ -48,10 +48,8 @@
                         </div>
                     </div>
                 </div>
-            </form>
-        </div>
+            </div>
         </form>
-        </div>
     </uib-tab>
     <uib-tab index="1" heading="Debug" ng-show="debugMode">
         <ods-model model="section" css-class="fixed-height"></ods-model>
