--- a/component/forms/schema/components/section/section-properties.html
+++ b/component/forms/schema/components/section/section-properties.html
@@ -1,57 +1,53 @@
-<uib-tabset class="nav nav-tabs">
+<uib-tabset class="nav-tabs-custom">
     <uib-tab index="0" heading="Properties">
-        <form name="sectionPropertiesForm" class="form form-horizontal">
-            <div class="padding-top">
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                        <div class="form-group"
-                             ng-class="{'has-error': sectionPropertiesForm.{{section.name}}-sectionName.$invalid}">
-                            <label for="{{section.name}}-sectionName" class="col-sm-2 control-label">Name:</label>
-                            <div class="col-sm-3 ">
-                                <input type="text" class="form-control" id="{{section.name}}-sectionName"
-                                       name="{{section.name}}-sectionName" ng-readonly="true"
-                                       placeholder="Name..." ng-model="section.name"
-                                       ng-required="true">
-                            </div>
-                        </div>
-                        <div class="form-group"
-                             ng-class="{'has-error': sectionPropertiesForm.{{section.name}}-rows.$invalid}">
-                            <label for="{{section.name}}-rows" class="col-sm-2 control-label">Rows:</label>
-                            <div class="col-sm-2">
-                                <input type="number" class="form-control" id="{{section.name}}-rows"
-                                       name="{{section.name}}-rows"
-                                       placeholder="Rows..." ng-model="section.rows.length"
-                                       ng-required="false" ng-disabled="true">
-                            </div>
-                            <div class="col-lg-6">
-                                <button type="button" class="btn btn-primary" ng-click="addRow()">Add row</button>
-                            </div>
-                        </div>
-                        <div class="form-group"
-                             ng-class="{'has-error': sectionPropertiesForm.{{section.name}}-title.$invalid}">
-                            <label for="{{section.name}}-title" class="col-sm-2 control-label">Title:</label>
-                            <div class="col-sm-8">
-                                <input type="text" class="form-control" id="{{section.name}}-title"
-                                       name="{{section.name}}-title"
-                                       placeholder="Title..." ng-model="section.title"
-                                       ng-required="false">
-                            </div>
-                        </div>
-                        <div class="form-group"
-                             ng-class="{'has-error': sectionPropertiesForm.{{section.name}}-hideLabel.$invalid}">
-                            <label for="{{section.name}}-hideLabel" class="col-sm-2 control-label"
-                                   title="Indicates if will show title or not.">Hide Title:</label>
-                            <div class="col-sm-9">
-                                <input type="checkbox" id="{{section.name}}-hideLabel" name="{{section.name}}-hideLabel"
-                                       ng-model="section.hideLabel">
-                            </div>
-                        </div>
+        <div class="padding-top">
+            <form name="sectionPropertiesForm" class="form-horizontal">
+                <div class="form-group"
+                     ng-class="{'has-error': sectionPropertiesForm.{{section.name}}-sectionName.$invalid}">
+                    <label for="{{section.name}}-sectionName" class="col-sm-2 control-label">Name:</label>
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" id="{{section.name}}-sectionName"
+                               name="{{section.name}}-sectionName"
+                               placeholder="Name..." ng-model="section.name"
+                               ng-required="true">
                     </div>
                 </div>
-            </div>
-        </form>
+                <div class="form-group"
+                     ng-class="{'has-error': sectionPropertiesForm.{{section.name}}-rows.$invalid}">
+                    <label for="{{section.name}}-rows" class="col-sm-2 control-label">Rows:</label>
+                    <div class="col-sm-2">
+                        <input type="number" class="form-control" id="{{section.name}}-rows"
+                               name="{{section.name}}-rows"
+                               placeholder="Rows..." ng-model="section.rows.length"
+                               ng-required="false" ng-disabled="true">
+                    </div>
+                    <div class="col-lg-6">
+                        <button type="button" class="btn btn-primary" ng-click="addRow()">Add row</button>
+                    </div>
+                </div>
+                <div class="form-group"
+                     ng-class="{'has-error': sectionPropertiesForm.{{section.name}}-title.$invalid}">
+                    <label for="{{section.name}}-title" class="col-sm-2 control-label">Title:</label>
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" id="{{section.name}}-title"
+                               name="{{section.name}}-title"
+                               placeholder="Title..." ng-model="section.title"
+                               ng-required="false">
+                    </div>
+                </div>
+                <div class="form-group"
+                     ng-class="{'has-error': sectionPropertiesForm.{{section.name}}-hideLabel.$invalid}">
+                    <label for="{{section.name}}-hideLabel" class="col-sm-2 control-label"
+                           title="Indicates if will show title or not.">Hide Title:</label>
+                    <div class="col-sm-9">
+                        <input type="checkbox" id="{{section.name}}-hideLabel" name="{{section.name}}-hideLabel"
+                               ng-model="section.hideLabel">
+                    </div>
+                </div>
+            </form>
+        </div>
     </uib-tab>
-    <uib-tab index="1" heading="Debug" ng-show="debugMode">
+    <uib-tab index="3" heading="Debug" ng-show="debugMode">
         <ods-model model="section" css-class="fixed-height"></ods-model>
     </uib-tab>
 </uib-tabset>
