Trying to fix section properties.

--- a/component/forms/form-builder.html
+++ b/component/forms/form-builder.html
@@ -10,7 +10,7 @@
         <ods-form-toolbar></ods-form-toolbar>
     </div>
     <div class="col-md-9">
-        <uib-tabset class="nav-tabs-custom">
+        <uib-tabset class="nav-tabs">
             <uib-tab index="0" heading="Form information">
                 <ods-form-info schema="schema"></ods-form-info>
             </uib-tab>
