--- a/component/forms/schema/components/field/field-properties.html
+++ b/component/forms/schema/components/field/field-properties.html
@@ -1,4 +1,4 @@
-<uib-tabset class="nav-tabs-custom">
+<uib-tabset class="nav-tabs">
     <uib-tab index="0" heading="Properties">
         <form name="sectionPropertiesForm" class="form-horizontal">
             <div class="box-body padding-top">
