--- a/component/forms/schema/components/row/row-properties.html
+++ b/component/forms/schema/components/row/row-properties.html
@@ -1,4 +1,4 @@
-<uib-tabset class="nav-tabs-custom">
+<uib-tabset class="nav-tabs">
     <uib-tab index="0" heading="Properties">
         <form name="rowPropertiesForm" class="form form-horizontal">
             <div class="padding-top">
