Fixed in table plugin, manage rows position to relative.

--- a/component/forms/schema/plugins/table/table.html
+++ b/component/forms/schema/plugins/table/table.html
@@ -21,7 +21,7 @@
                     </ul>
                 </div>
             </td>
-            <td ng-show="field.manageRows" width="20px">
+            <td ng-show="field.manageRows" width="20px" style="position: relative">
                 <button type="button" ng-click="removeRow(field, $index)" title="Remove row"
                         ng-show="field.manageRows && !(field.manageRows && $index === 0)" class="btn btn-danger pull-right">
                     <span class="fa fa-trash"></span>
