--- a/component/forms/toolbar/toolbar.html
+++ b/component/forms/toolbar/toolbar.html
@@ -1,6 +1,20 @@
 <div class="toolbar-container box-solid" bs-affix data-offset-top="10" data-offset-bottom="0">
     <div class="form-header with-border">
-        <h3 class="box-title">{{toolbar.title}}</h3>
+        <div class="row" style="margin: 0">
+            <div class="col-lg-7">
+                <h3 class="box-title">{{toolbar.title}}</h3>
+            </div>
+            <div class="col-lg-5 accordion-button-right">
+                <button class="btn btn-success btn-sm" title="Import schema" ng-click="import()">
+                    <i class="fa fa-upload"></i>
+                    Import
+                </button>
+                <button class="btn btn-primary btn-sm" title="Export schema" ng-click="export()">
+                    <i class="fa fa-download"></i>
+                    Export
+                </button>
+            </div>
+        </div>
     </div>
     <!-- /.box-header -->
     <div class="box-body">
