--- a/component/forms/schema/components/base-properties/placeholder-properties.html
+++ b/component/forms/schema/components/base-properties/placeholder-properties.html
@@ -4,7 +4,7 @@
         <label for="{{field.name}}-placeholder" class="col-sm-4 control-label">Placeholder:</label>
         <div class="col-sm-8">
             <input type="text" class="form-control" id="{{field.name}}-placeholder" name="{{field.name}}-placeholder"
-                   placeholder="Label..." ng-model="field.placeholder" ng-required="false">
+                   placeholder="Placeholder..." ng-model="field.placeholder" ng-required="false">
         </div>
     </div>
 </div>
