--- a/component/forms/schema/components/radio-list/radio-options-properties.html
+++ b/component/forms/schema/components/radio-list/radio-options-properties.html
@@ -24,7 +24,8 @@
         </tr>
         </thead>
         <tbody>
-        <tr ng-form="fieldOptionForm" ng-repeat="option in options" ng-class="{ 'error': fieldOptionForm.$invalid }">
+        <tr ng-form="fieldOptionForm" ng-repeat="option in options"
+            ng-class="{ 'has-error': fieldOptionForm.$invalid }">
             <td>
                 <input type="radio" name="{{field.name}}Selected[]" ng-value="option.id" ng-model="field.value"/>
             </td>
