Fixed form view in some components.

--- a/component/forms/common/viewer/checkbox-list.html
+++ b/component/forms/common/viewer/checkbox-list.html
@@ -1,1 +1,7 @@
-<div>{{getFieldChecklistFromValues(field)}}</div>
+<div>
+    <div class="" ng-repeat="option in getFieldChecklistFromValues(field)"
+         ng-class="{'checkbox-inline' : field.inline, 'checkbox' : !field.inline}">
+        <i class="fa fa-check-square-o"></i>
+        <span class="form-check-label" ng-bind-html="option"></span>
+    </div>
+</div>
