--- a/component/forms/schema/components/multi-select/multi-select-options-properties.html
+++ b/component/forms/schema/components/multi-select/multi-select-options-properties.html
@@ -24,7 +24,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr ng-form="fieldOptionForm" ng-repeat="option in options" ng-class="{ 'error': fieldOptionForm.$invalid }">
+        <tr ng-form="fieldOptionForm" ng-repeat="option in options" ng-class="{ 'has-error': fieldOptionForm.$invalid }">
             <td>
                 <input type="checkbox" name="{{field.name}}Selected[]" ng-value="field.options[$index]"
                        ng-checked="field.value.indexOf(field.options[$index]) > -1"
