Almost finished import/export.

--- a/component/forms/style.scss
+++ b/component/forms/style.scss
@@ -42,6 +42,10 @@
 
 //Toolbar section
 
+[hidden] {
+  display: none !important;
+}
+
 .toolbar-container {
   margin-top: 10px;
   background-color: #fff;
