--- a/component/forms/common/fields/radio-list.html
+++ b/component/forms/common/fields/radio-list.html
@@ -2,7 +2,7 @@
 <div ng-class="field.inline === true ? 'radio-inline' : 'radio'"
      ng-repeat="option in field.options | limitTo: field.limitTo">
     <label>
-        <input type="radio" value="{{option.id}}" ng-model="field.value"/>
+        <input type="radio" value="{{option.id}}" ng-model="field.value" ng-disabled="field.readonly"/>
         {{option.name}}
     </label>
 </div>
