--- a/component/forms/schema/components/checkbox/checkbox-properties.html
+++ b/component/forms/schema/components/checkbox/checkbox-properties.html
@@ -7,6 +7,7 @@
                 <div ng-include="'forms/schema/components/base-properties/tooltip-properties.html'"></div>
                 <div ng-include="'forms/schema/components/checkbox/ln-properties.html'"></div>
                 <div ng-include="'forms/schema/components/base-properties/value-properties.html'"></div>
+                <div ng-include="'forms/schema/components/base-properties/readonly-properties.html'"></div>
             </div>
         </form>
     </uib-tab>
