--- a/component/forms/schema/components/input.html
+++ b/component/forms/schema/components/input.html
@@ -1,3 +1,4 @@
 <div ng-include="'forms/schema/components/label.html'"></div>
-<input class="form-control" name="{{field.name}}-dev" id="{{field.name}}-dev" ng-model="field.value" type="{{field.type}}"
-       placeholder="{{field.placeholder}}" ng-required="{{field.required}}" title="{{field.tooltip}}"/>
+<input class="form-control" name="{{field.name}}-dev" id="{{field.name}}-dev" ng-model="field.value"
+       type="{{field.type}}" placeholder="{{field.placeholder}}" ng-required="{{field.required}}"
+       title="{{field.tooltip}}" ng-readonly="field.readonly"/>
