--- a/component/forms/schema/components/radio-list/radio-list-properties.html
+++ b/component/forms/schema/components/radio-list/radio-list-properties.html
@@ -14,6 +14,7 @@
                         </div>
                     </div>
                 </div>
+                <div ng-include="'forms/schema/components/base-properties/readonly-properties.html'"></div>
             </div>
         </form>
     </uib-tab>
