--- a/component/forms/common/fields/datetime.html
+++ b/component/forms/common/fields/datetime.html
@@ -1,9 +1,9 @@
 <div class="input-group">
-    <input id="{{field.name + dev}}" class="form-control" ods-dynamic-name="field.name" type="text" enable-time="field.enableTime"
-           datetime-picker="{{field.format}}" ng-required="getRequired(field)" ng-model="field.value"
-           is-open="field.open" model-options="field.options"/>
+    <input id="{{field.name + dev}}" class="form-control" ods-dynamic-name="field.name" type="text"
+           enable-time="field.enableTime" datetime-picker="{{field.format}}" ng-required="getRequired(field)"
+           ng-model="field.value" is-open="field.open" model-options="field.options" ng-disabled="field.readonly"/>
     <span class="input-group-btn">
-        <button type="button" class="btn btn-default" ng-click="openCalendar(field)">
+        <button type="button" class="btn btn-default" ng-click="openCalendar(field)" disabled="field.readonly">
             <i class="fa fa-calendar"></i>
         </button>
     </span>
