--- a/component/forms/common/fields/select.html
+++ b/component/forms/common/fields/select.html
@@ -1,6 +1,6 @@
 <select class="form-control" ods-dynamic-name="field.name" name="{{field.name}}" id="{{field.name}}"
         ng-model="field.value" title="{{field.tooltip}}" ng-required="getRequired(field)"
-        ng-disabled="{{fieldDisabled}}"
+        disabled="{{fieldDisabled || field.readonly}}"
         ng-options="element as element.name for element in field.options | limitTo: field.limitTo track by element.id">
     <option value="" disabled hidden>{{field.placeholder}}</option>
 </select>
