--- a/component/forms/schema/components/base-properties/common-properties.html
+++ b/component/forms/schema/components/base-properties/common-properties.html
@@ -3,3 +3,4 @@
 <div ng-include="'forms/schema/components/base-properties/placeholder-properties.html'"></div>
 <div ng-include="'forms/schema/components/base-properties/tooltip-properties.html'"></div>
 <div ng-include="'forms/schema/components/base-properties/value-properties.html'"></div>
+<div ng-include="'forms/schema/components/base-properties/readonly-properties.html'"></div>
