--- a/component/forms/schema/components/checkbox-list/checkbox-list-properties.html
+++ b/component/forms/schema/components/checkbox-list/checkbox-list-properties.html
@@ -15,6 +15,7 @@
                         </div>
                     </div>
                 </div>
+                <div ng-include="'forms/schema/components/base-properties/readonly-properties.html'"></div>
             </div>
         </form>
     </uib-tab>
