--- a/component/forms/schema/components/toggle/toggle-properties.html
+++ b/component/forms/schema/components/toggle/toggle-properties.html
@@ -6,6 +6,7 @@
                 <div ng-include="'forms/schema/components/base-properties/label-properties.html'"></div>
                 <div ng-include="'forms/schema/components/base-properties/value-properties.html'"></div>
                 <div ng-include="'forms/schema/components/toggle/ln-properties.html'"></div>
+                <div ng-include="'forms/schema/components/base-properties/readonly-properties.html'"></div>
             </div>
         </form>
     </uib-tab>
