--- a/component/forms/common/fields/checkbox.html
+++ b/component/forms/common/fields/checkbox.html
@@ -1,7 +1,7 @@
 <div class="checkbox">
     <br ng-show="field.ln">
     <label>
-        <input ods-dynamic-name="field.name" id="{{field.name}}" ng-model="field.value" type="{{field.type}}"
+        <input ods-dynamic-name="field.name" id="{{field.name + dev}}" ng-model="field.value" type="{{field.type}}"
                placeholder="{{field.placeholder}}" ng-required="{{field.required}}" title="{{field.tooltip}}"
                ng-disabled="field.readonly"/>
         <span class="ng-binding ng-scope">{{field.label}}</span>
