--- a/component/forms/common/fields/select.html
+++ b/component/forms/common/fields/select.html
@@ -1,4 +1,4 @@
-<select class="form-control" ods-dynamic-name="field.name" name="{{field.name}}" id="{{field.name}}"
+<select class="form-control" ods-dynamic-name="field.name" name="{{field.name}}" id="{{field.name + dev}}"
         ng-model="field.value" title="{{field.tooltip}}" ng-required="getRequired(field)"
         disabled="{{fieldDisabled || field.readonly}}"
         ng-options="element as element.name for element in field.options | limitTo: field.limitTo track by element.id">
